samples/_failures_safe/1761169900_c800ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9899a15.c: In function ‘main’:
./samples/SAFE/__tmp_a9899a15.c:159:17: error: expected declaration or statement at end of input
  159 |                 }
      |                 ^
./samples/SAFE/__tmp_a9899a15.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a9899a15.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a9899a15.c:159:17: error: expected declaration or statement at end of input
